# ttt_package

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-legacy.txt  requirements.txt
legacy_backends/: tt_lib.py  tucker2_lib.py
src/ttt_package/: __init__.py  core.py  tatcu.py  tproduct.py  tsvd.py  tt_backend.py  ttt_svd.py  utils.py
src/ttt_package/legacy/: __init__.py  tt_lib.py  tucker2_lib.py
test/: __init__.py  demo_ttt_tatcu_chromatic_gesture.py
tests/: test_tatcu.py
